infra/kubernetes/apps/ai-chatbot.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ai-chatbot
  labels:
    app: ai-chatbot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ai-chatbot
  template:
    metadata:
      labels:
        app: ai-chatbot
    spec:
      containers:
      - name: ai-chatbot
        image: asia-northeast1-docker.pkg.dev/erp-project-8386/arsneonci-repo/ai-chatbot:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000

---
apiVersion: v1
kind: Service
metadata:
  name: ai-chatbot-svc
spec:
  type: ClusterIP
  selector:
    app: ai-chatbot
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
