infra/kubernetes/apps/ai-multimodal-engine.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ai-multimodal-engine
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ai-multimodal-engine
  template:
    metadata:
      labels:
        app: ai-multimodal-engine
    spec:
      containers:
      - name: ai-multimodal-engine
        image: asia-northeast1-docker.pkg.dev/erp-project-8386/arsneonci-repo/ai-multimodal-engine:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8002
        volumeMounts: # Mount Persistent Volume để load Model Weights từ ổ cứng
        - name: model-weights
          mountPath: /models
---
apiVersion: v1
kind: Service
metadata:
  name: ai-multimodal-engine-svc
spec:
  type: ClusterIP
  selector:
    app: ai-multimodal-engine
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8002
