infra/kubernetes/apps/backend-purchasing.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-purchasing
  labels:
    app: backend-purchasing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-purchasing
  template:
    metadata:
      labels:
        app: backend-purchasing
    spec:
      containers:
      - name: backend-purchasing
        image: asia-northeast1-docker.pkg.dev/erp-project-8386/arsneonci-repo/backend-purchasing:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8092
---
apiVersion: v1
kind: Service
metadata:
  name: backend-purchasing-svc
spec:
  type: ClusterIP
  selector:
    app: backend-purchasing
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8092
