infra/kubernetes/apps/backend-sales.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-sales
  labels:
    app: backend-sales
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-sales
  template:
    metadata:
      labels:
        app: backend-sales
    spec:
      containers:
      - name: backend-sales
        image: asia-northeast1-docker.pkg.dev/erp-project-8386/arsneonci-repo/backend-sales:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8093
---
apiVersion: v1
kind: Service
metadata:
  name: backend-sales-svc
spec:
  type: ClusterIP
  selector:
    app: backend-sales
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8093
