infra/kubernetes/apps/erp-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: erp-frontend
  labels:
    app: erp-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: erp-frontend
  template:
    metadata:
      labels:
        app: erp-frontend
    spec:
      containers:
      - name: frontend
        image: asia-northeast1-docker.pkg.dev/erp-project-8386/arsneonci-repo/erp-frontend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: erp-frontend-svc
spec:
  type: ClusterIP
  selector:
    app: erp-frontend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
