infra/kubernetes/apps/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: erp-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  # 1. Luồng cho subdomain (portal)
  - host: portal.arsneonci.space
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: api-gateway-svc
            port:
               number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: erp-frontend-svc
            port:
               number: 3000
  # 2. Luồng cho domain gốc
  - host: arsneonci.space
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: api-gateway-svc
            port:
               number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: erp-frontend-svc
            port:
               number: 3000
